# storygen

./: .replit  Pasted--gitignore-pycache-test-data-build-DS-Store-egg-info-en-1728322827485.txt  app.py  config.py  models.py  pyproject.toml  recreate_db.py  replit.nix  routes.py
instance/: storytelling.db
static/css/: styles.css
static/js/: main.js
templates/: base.html  edit_scene.html  index.html  login.html  my_stories.html  register.html  view_story.html
utils/: ai_agents.py  image_generator.py  story_generator.py  text_to_speech.py
